[package]
name = "conveyor"
version = "0.1.0"
authors = ["Sherab Giovannini <sherab.giovannini@byteheed.com>"]

[dev-dependencies]
stainless = "*"

[dependencies]
clap = "2.27.1"
termcolor = "0.3"
slog = "2.0"
slog-term = "2.2.0"
bitflags = "1.0"
byteorder = "*"
num = "*"
pdb = "0.2"
goblin = "*"
reqwest = "*"
enum_primitive = "*"

[dependencies.winapi]
version = "0.3"
features = ["winsvc", 
            "ioapiset",
            "synchapi",
            "handleapi",
            "fileapi",
            "winioctl",
            "processthreadsapi",
            "winnt",
            "winbase"]
