[package]
name = "conveyor"
version = "0.1.0"
authors = ["Sherab Giovannini <sherab.giovannini@byteheed.com>"]

[dev-dependencies]
stainless = "*"

[dependencies]
clap = "2.27.1"
termcolor = "0.3"
slog = "2.0"
slog-term = "2.2.0"
bitflags = "1.0"
byteorder = "1.1"
num = "0.1"
pdb = "0.2"
failure = "*"
failure_derive = "*"
goblin = "0.0.13"
reqwest = "0.8"
rand = "0.4"
enum_primitive = "0.1"
indicatif = "*"
console = "*"

[dependencies.winapi]
version = "0.3"
features = ["winsvc",
            "ioapiset",
            "synchapi",
            "handleapi",
            "fileapi",
            "psapi",
            "libloaderapi",
            "winioctl",
            "processthreadsapi",
            "winnt",
            "winbase"]
