[package]
name = "conveyor"
version = "0.1.0"
authors = ["Sherab Giovannini <sherab.giovannini@byteheed.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
termcolor = "1.3.0"
slog = "2.0"
slog-term = "2.2.0"
bitflags = { version = "2.4.1", features = [] }
byteorder = "1.1"
num = "0.4.1"
pdb = "0.8.0"
failure = "*"
failure_derive = "*"
goblin = "0.7.1"
reqwest = { version = "0.11.22" }
rand = "0.8.5"
enum_primitive = "0.1"
indicatif = "*"
console = "*"

[dependencies.winapi]
version = "0.3"
features = ["winsvc",
            "ioapiset",
            "synchapi",
            "handleapi",
            "fileapi",
            "psapi",
            "libloaderapi",
            "winioctl",
            "processthreadsapi",
            "winnt",
            "winbase"]
